[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

members = [
    "vfc",
    "sayre",
    "quadrantal",
    "minifb-frontend",
    "hunt",
    "hli",
    "escape",
    "web-game",
]

[profile.dev]
opt-level = 1

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 3

